开始处理配置文件的操作

--- a/SchtasksTool/SchtasksTool.csproj
+++ b/SchtasksTool/SchtasksTool.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="cmdHelper.cs" />
+    <Compile Include="Control_ini.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
